--- a/.vscodeignore
+++ b/.vscodeignore
@@ -6,5 +6,17 @@ src/**
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
-**/*.map
-**/*.ts 
+*.map
+**/*.ts
+**/.vscode-test.*
+**/*.tmp
+.github/**
+.semaphore/**
+.prettierignore
+.nvmrc
+Makefile
+service.yml
+sonar-project.properties
+*openapi.json
+*openapi.yaml
+openapitools.json
