--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "sfdc-extension",
-  "displayName": "Salesforce SOQL Query Runner",
+  "name": "sf-explorer",
+  "displayName": "sf-explorer",
+  "publisher": "Gnana997",
   "description": "Run SOQL queries in VSCode with authentication",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.85.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gnana997/sf-explorer"
+  },
   "categories": [
     "Other"
+  ],
+  "keywords": [
+    "salesforce",
+    "soql",
+    "query",
+    "explorer"
   ],
   "activationEvents": [
     "onView:sfdcEnvironments",
@@ -87,10 +98,13 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
@@ -101,7 +115,12 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "ts-loader": "^9.5.1",
+    "terser-webpack-plugin": "^5.3.10",
+    "@types/webpack": "^5.28.5"
   },
   "dependencies": {
     "jsforce": "^1.11.0"
